Minor: Proper fix for blurred icons in Basilisk * A max-width of 18px seems to be set on all toolbar buttons

--- a/skin/css/aios_buttons_australis.css
+++ b/skin/css/aios_buttons_australis.css
@@ -1,6 +1,10 @@
 toolbarbutton.toolbarbutton-1.aios-tbutton:not(#downloads-button) {
     list-style-image: url(../icons/toolbar_windows.png);
-	transform: scale(1.1); /* Fix for blurred icons */
+}
+
+:-moz-any(#aios-toolbar, #aios-sbhtoolbar) .toolbarbutton-1 > .toolbarbutton-icon,
+:-moz-any(#aios-toolbar, #aios-sbhtoolbar) .toolbarbutton-1 > :-moz-any(.toolbarbutton-menubutton-button, .toolbarbutton-badge-stack) > .toolbarbutton-icon {
+  max-width: none;
 }
 
 toolbar:-moz-lwtheme-brighttext toolbarbutton.toolbarbutton-1.aios-tbutton:not(#downloads-button),
